# StellarSwipe-Contract

.github/workflows/: ci.yml
config/: mainnet.json
contracts/fee_collector/src/: insurance.rs  rewards.rs
contracts/stake_vault/src/: rewards.rs
docs/: deployment.md  errors.md  frontend_integration.md  incident_response.md  mainnet_checklist.md  protocol23_optimization.md  reputation_decay_guide.md  task_links.md  testnet_checklist.md
docs/security/: flash_loan_protection_stake_vault.md  privilege_escalation_analysis.md  security_model.md
frontend/: tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: WalletButton.tsx
frontend/stories/: HUD.stories.ts
scripts/: deploy.ts  monitor.ts  package.json  testnet_utils.ts
scripts/simulator/: README.md  index.ts
stellar-swipe/: Cargo.toml
stellar-swipe/contracts/analytics/: Cargo.toml
stellar-swipe/contracts/analytics/src/: lib.rs
stellar-swipe/contracts/auto_trade/: Cargo.toml
stellar-swipe/contracts/auto_trade/src/: admin.rs  amm_bridge.rs  conditional.rs  correlation.rs  errors.rs  exit_strategy.rs  keeper.rs  kyc.rs  lib.rs  logging.rs  oracle.rs  portfolio.rs  rate_limit.rs  referral.rs  risk_parity.rs  sdex.rs  smart_routing.rs  storage.rs  test.rs  test_admin_transfer.rs  test_oracle_whitelist.rs  twap.rs
stellar-swipe/contracts/auto_trade/src/strategies/: mean_reversion.rs  momentum.rs  sentiment.rs
stellar-swipe/contracts/auto_trade/tests/integration/: test_contract_upgrade.rs
stellar-swipe/contracts/auto_trade/tests/load/: test_perf_regression.rs
stellar-swipe/contracts/bridge/: Cargo.toml
stellar-swipe/contracts/bridge/src/: analytics.rs  lib.rs  liquidity.rs  messaging.rs
stellar-swipe/contracts/common/: Cargo.toml
stellar-swipe/contracts/common/src/: amm_bridge.rs  constants.rs  emergency.rs  health.rs  lib.rs  multisig.rs  oracle.rs  perf.rs  rate_limit.rs  replay_protection.rs  storage_key_tests.rs  test_time.rs
stellar-swipe/contracts/fee_collector/: Cargo.toml
stellar-swipe/contracts/fee_collector/proptest-regressions/tests/: property_tests.txt
stellar-swipe/contracts/fee_collector/src/: analytics.rs  errors.rs  fee_cache.rs  lib.rs  rebates.rs  reports.rs  storage.rs  test.rs
stellar-swipe/contracts/governance/: Cargo.toml
stellar-swipe/contracts/governance/src/: committees.rs  errors.rs  lib.rs  proposal_deposit.rs  reputation.rs  test.rs  test_TomikeDS.rs  test_committee_elections.rs  test_pause_propagation.rs  treasury.rs
stellar-swipe/contracts/integration_tests/: Cargo.toml
stellar-swipe/contracts/integration_tests/tests/integration/: test_complete_user_journey.rs
stellar-swipe/contracts/oracle/: Cargo.toml
stellar-swipe/contracts/oracle/src/: admin.rs  conversion.rs  errors.rs  events.rs  external_adapter.rs  history.rs  lib.rs  multi_hop.rs  reputation.rs  staleness.rs  test_admin_transfer.rs  test_health.rs  types.rs
stellar-swipe/contracts/shared/: Cargo.toml
stellar-swipe/contracts/shared/src/: auth.rs  cross_contract.rs  event_topics.rs  events.rs  initializable.rs  lib.rs  math.rs  version.rs
stellar-swipe/contracts/signal_registry/: Cargo.toml
stellar-swipe/contracts/signal_registry/src/: admin.rs  analytics.rs  bundles.rs  community_voting.rs  errors.rs  events.rs  expiry.rs  export.rs  leaderboard.rs  lib.rs  migration.rs  performance.rs  providers.rs  query.rs  reports.rs  reputation.rs  scoring.rs  storage_monitor.rs  submission.rs  template_presets.rs  templates.rs  test.rs  test_admin_transfer.rs  test_analytics.rs  test_multisig_approval.rs  test_reputation.rs  test_signal_issues.rs  test_versioning.rs  types.rs  validation.rs  versioning.rs
stellar-swipe/contracts/signal_registry/src/tests/: test_signal_lifecycle.rs
stellar-swipe/contracts/stake_vault/: Cargo.toml
stellar-swipe/contracts/stake_vault/src/: lib.rs  migration.rs  tests.rs
stellar-swipe/contracts/trade_executor/: Cargo.toml
stellar-swipe/contracts/trade_executor/src/: dca.rs  errors.rs  leverage.rs  lib.rs  test.rs
stellar-swipe/contracts/trade_executor/src/tests/: mod.rs  test_dca.rs  test_latency_benchmark.rs  test_market_simulation.rs
stellar-swipe/contracts/user_portfolio/: Cargo.toml
stellar-swipe/contracts/user_portfolio/src/: lib.rs  migration.rs  onboarding.rs  queries.rs  storage.rs  watchlist.rs
stellar-swipe/contracts/user_portfolio/src/tests/: mod.rs
stellar-swipe/docs/: amm_bridge.md  committee_elections.md  hft_performance_optimization.md  treasury_budget_caps.md
stellar-swipe/scripts/: audit_dependencies.py  check_event_topics.sh  check_ts_bindings.sh  verify_no_std.py
tests/: coverage_report.sh
tests/regression/: README.md  index.test.ts
