[workspace]
resolver = "2"
members = [
  "contracts/common",
  "contracts/signal_registry",
  "contracts/auto_trade",
  "contracts/trade_executor",
  "contracts/governance",
  "contracts/oracle",
  "contracts/stake_vault",
  "contracts/shared",
  "contracts/fee_collector",
  "contracts/user_portfolio",
  "contracts/analytics",
  "contracts/integration_tests",
]

[workspace.dependencies]
soroban-sdk = "23"

[workspace.lints.rust]
deprecated = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unreachable_patterns = "allow"
private_interfaces = "allow"
private_bounds = "allow"
unused_qualifications = "allow"
unused_must_use = "allow"
unused_assignments = "allow"
unused_parens = "allow"
unused_braces = "allow"
unused_lifetimes = "allow"
unused_macro_rules = "allow"
unused_allocation = "allow"
unused_comparisons = "allow"
unused_doc_comments = "allow"
unused_crate_dependencies = "allow"
unused_extern_crates = "allow"
unused_features = "allow"
unused_labels = "allow"
unused_results = "allow"
unused_unsafe = "allow"
unused_attributes = "allow"

[workspace.lints.clippy]
too_many_arguments = "allow"
manual_range_contains = "allow"
empty_line_after_doc_comments = "allow"
manual_div_ceil = "allow"
module_inception = "allow"
enum_variant_names = "allow"
upper_case_acronyms = "allow"
all_variant_names_same_prefix = "allow"
needless_return = "allow"
let_and_return = "allow"
if_same_then_else = "allow"
redundant_pattern_matching = "allow"
manual_clamp = "allow"
manual_assert = "allow"
bool_assert_comparison = "allow"
clone_on_copy = "allow"
needless_borrow = "allow"
deref_addrof = "allow"
comparison_chain = "allow"
absurd_extreme_comparisons = "allow"
cast_abs_to_unsigned = "allow"
unnecessary_cast = "allow"
match_like_matches_macro = "allow"
collapsible_if = "allow"
iter_nth_loop = "allow"
result_unit_err = "allow"
len_zero = "allow"
length_comparison_to_zero = "allow"
assign_op_pattern = "allow"
if_not_else = "allow"
contains_name = "allow"
needless_question_mark = "allow"
question_mark = "allow"
unused_unit = "allow"
manual_is_multiple_of = "allow"

# Smaller WASM for Soroban deploys (lower upload cost + instruction footprint).
# Build:  cargo build --workspace --target wasm32-unknown-unknown --release
# Then:   ./scripts/build.sh   (runs `stellar contract optimize` on each *.wasm)
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
