[package]
name = "signal_registry"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils", "stellar_swipe_common/testutils", "shared/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
stellar_swipe_common = { path = "../common" }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar_swipe_common = { path = "../common", features = ["testutils"] }
shared = { path = "../shared", features = ["testutils"] }

